2002-08-07  Tim Legant  <tim@catseye.net>

	* FilterParser.py (_FilterFile): New class to hold per-file data.

	(FilterParser.__init__): Moved Parser initialization to
	constructor.

	(FilterParser.__pushfile, FilterParser.__popfile,
	FilterParser.__file): New methods.

	(FilterParser.read, FilterParser.__readrule,
	FilterParser.__parseargs): Re-coded so recursive calls work.

	(FilterParser.__parse): Re-coded so recursive calls work.  The
	nested exception is now propagated all the way out.

	(FilterParser.__includefilter): New function.  Recursively loads
	and parses included filter files.

2002-08-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.__findvarsub): Query the Defaults
	vardict when checking the namespace.
	
2002-08-06  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Added macro substitution and variable
	interpolation.

	(Macro): New class.

	(FilterParser.__parsemacro, FilterParser.__expandmacros,
	FilterParser.__findvarsub, FilterParser.__interpolatevars): New
	functions.

	(FilterParser.firstmatch): Added '-optional' argument to all rules
	that access files.

2002-07-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (X_TMDA_IN_SUBJECT, ADDED_HEADERS_SERVER): New
	variables.

	Renamed ADDED_HEADERS to ADDED_HEADERS_CLIENT.
	
2002-06-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py: New helper functions: getuid, getgid, gethomedir, and
	getgrouplist.

2002-06-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (CONFIG_EXEC): New variable.

2002-06-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Add PENDING_WHITELIST_APPEND &
	PENDING_BLACKLIST_APPEND.
	
2002-06-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_keyword_cookie): Replace RECIPIENT_DELIMITER
	with `?' in the keyword.

2002-06-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
